Fixed form styling so that it doesn't go behind the footer

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -23,3 +23,7 @@
 .login-form {
     padding: 45px 580px 0px 25px;
 }
+
+.simple_form.new_database {
+    padding-bottom: 100px;
+}
